# Deepgraph

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  HANDOFF.md  LATENT_COMMUNICATION_RESEARCH.md  LICENSE  PRD_DEEPGRAPH_HANDOFF_2026-04-21.md  README.md  SYSTEM.md  check_cla.py  cla-signers.json  config.py  deepgraph.toml  docker-compose.grobid.yml  docker-compose.postgres.yml  main.py  pyproject.toml  requirements.txt  run_analysis_once.py  run_bulk_deep_insights.py  start.sh  start_background.sh  start_pipeline_1000.sh  status_background.sh  stop_background.sh  tmp_generated_train.py
agents/: abstraction_agent.py  agenda_budget.py  agenda_loader.py  agenda_orchestrator.py  agenda_relevance.py  agenda_selector.py  agent_registry.py  ai_reviewer.py  artifact_manager.py  benchmark_artifacts.py  benchmark_audit.py  benchmark_suite.py  capability_registry.py  claim_grounding.py  codex_executor.py  direction_intake.py  discovery_metadata.py  discovery_supervisor.py  domain_summary_agent.py  evidence_gate.py  evidence_planner.py  evosci_requirements.py  experiment_executor.py  experiment_feasibility_agent.py  experiment_forge.py  experiment_plan_compiler.py  experiment_progress_monitor.py  experiment_review.py  experiment_supervisor.py  experiment_tuning_agent.py  experiment_watchdog.py  extraction_agent.py  figure_agent.py  format_linter.py  idea_route.py  insight_agent.py  insight_ranker.py  insight_validation.py  knowledge_loop.py  llm_client.py  (+37 more)
artifacts/: agenda_loop_acceptance.json  d1_template_router_acceptance.json  d2_top_venue_adapters_acceptance.json  (+5 more)
(+335 files in other folders)
