[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgraph"
version = "0.1.0"
description = "Open scientific opportunity mapping from literature, evidence tables, and plain-language domain briefs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "DeepGraph contributors" }
]
dependencies = [
  "flask>=3.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pymupdf>=1.24",
]
keywords = ["knowledge-graph", "science", "literature-mining", "arxiv", "research-ideas", "open-science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/billion-token-one-task/Deepgraph"
Repository = "https://github.com/billion-token-one-task/Deepgraph.git"

[project.scripts]
deepgraph = "main:main"

[tool.setuptools]
include-package-data = true
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
include = ["agents*", "db*", "ingestion*", "orchestrator*", "web*"]

[tool.setuptools.package-data]
db = ["schema.sql"]
web = ["templates/*.html", "static/css/*.css", "static/js/*.js"]
